# DiskANN-ParlayANN

./: .gitignore  CMakeLists.txt  command.txt
algorithms/bench/: neighborsTime.C
algorithms/vamana/: index.h  neighbors
data_tools/: compute_groundtruth  vec_to_bin
src/: main.cpp  neighborsTime.cpp
src/bench/: time_loop.h
src/utils/: NSGDist.h  beamSearch.h  check_nn_recall.h  check_range_recall.h  euclidian_point.h  parse_results.h  stats.h  types.h
src/vamana/: build_vamana.h  index.h  neighbors.h
src_cpy/: neighborsTime.cpp
src_cpy/utils/: check_nn_recall.h  mips_point.h  types.h  union.h
src_cpy/vamana/: index.h  neighbors.h
src_euclidean/: build_index.cpp  search.cpp
src_euclidean/bench/: parse_command_line.h
src_euclidean/utils/: beamSearch.h  check_nn_recall.h  csvfile.h  euclidian_point.h  graph.h  mips_point.h  mmap.h  parse_results.h  point_range.h  stats.h
src_euclidean/vamana/: build_vamana.h  neighbors.h
